# Real-Estate

./: .gitignore  Cargo.toml  README.md  out.txt  scraper.py
src/: helpers.rs  houston_zip_codes.txt  listing_structs.rs  main.rs  redfin.rs
