[package]
name = "Real_Estate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
html_parser = "0.7.0"
http = "1.0.0"
reqwest = { version = "0.11.23", features = ["cookies"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
